Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/generics/typevars/4856983/T4856983b.out
T4856983b.java:12:24: compiler.err.types.incompatible: I2, I1, (compiler.misc.incompatible.diff.ret: m, )
1 error
